--- a/renovation-services.html
+++ b/renovation-services.html
@@ -237,8 +237,8 @@
         }
 
         .gallery-image {
-            width: 300px;
-            height: auto;
+            width: 400px;
+            height: 400px;
             margin: 5px;
             flex-shrink: 0;
             border-radius: 10px;
