--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
 
         <!-- Contact Link -->
         <li class="nav-item">
-          <a class="nav-link" href="contact.html">Contact</a>
+          <a class="cta-button" href="contact.html">Contact us</a>
         </li>
       </ul>
     </div>
